library/src/libqtextobject.h

typedef QTextBlock::iterator QTextBlock__iterator;
typedef QTextFrame::iterator QTextFrame__iterator;
typedef QTextLayout::FormatRange QTextLayout__FormatRange;
typedef struct QGlyphRun QGlyphRun;
typedef struct QMetaObject QMetaObject;
typedef struct QTextBlock QTextBlock;
typedef struct QTextBlockFormat QTextBlockFormat;
typedef struct QTextBlockGroup QTextBlockGroup;
typedef struct QTextBlockUserData QTextBlockUserData;
typedef struct QTextBlock__iterator QTextBlock__iterator;
typedef struct QTextCharFormat QTextCharFormat;
typedef struct QTextCursor QTextCursor;
typedef struct QTextDocument QTextDocument;
typedef struct QTextFormat QTextFormat;
typedef struct QTextFragment QTextFragment;
typedef struct QTextFrame QTextFrame;
typedef struct QTextFrameFormat QTextFrameFormat;
typedef struct QTextFrameLayoutData QTextFrameLayoutData;
typedef struct QTextFrame__iterator QTextFrame__iterator;
typedef struct QTextLayout QTextLayout;
typedef struct QTextLayout__FormatRange QTextLayout__FormatRange;
typedef struct QTextList QTextList;
typedef struct QTextObject QTextObject;
QMetaObject* QTextObject_MetaObject(const QTextObject* self);
void* QTextObject_Metacast(QTextObject* self, const char* param1);
int QTextObject_Metacall(QTextObject* self, int param1, int param2, void** param3);
libqt_string QTextObject_Tr(const char* s);
QTextFormat* QTextObject_Format(const QTextObject* self);
int QTextObject_FormatIndex(const QTextObject* self);
QTextDocument* QTextObject_Document(const QTextObject* self);
int QTextObject_ObjectIndex(const QTextObject* self);
libqt_string QTextObject_Tr2(const char* s, const char* c);
libqt_string QTextObject_Tr3(const char* s, const char* c, int n);
QMetaObject* QTextBlockGroup_MetaObject(const QTextBlockGroup* self);
void* QTextBlockGroup_Metacast(QTextBlockGroup* self, const char* param1);
int QTextBlockGroup_Metacall(QTextBlockGroup* self, int param1, int param2, void** param3);
libqt_string QTextBlockGroup_Tr(const char* s);
libqt_string QTextBlockGroup_Tr2(const char* s, const char* c);
libqt_string QTextBlockGroup_Tr3(const char* s, const char* c, int n);
void QTextFrameLayoutData_OperatorAssign(QTextFrameLayoutData* self, QTextFrameLayoutData* param1);
QTextFrame* QTextFrame_new(QTextDocument* doc);
QMetaObject* QTextFrame_MetaObject(const QTextFrame* self);
void* QTextFrame_Metacast(QTextFrame* self, const char* param1);
int QTextFrame_Metacall(QTextFrame* self, int param1, int param2, void** param3);
libqt_string QTextFrame_Tr(const char* s);
void QTextFrame_SetFrameFormat(QTextFrame* self, QTextFrameFormat* format);
QTextFrameFormat* QTextFrame_FrameFormat(const QTextFrame* self);
QTextCursor* QTextFrame_FirstCursorPosition(const QTextFrame* self);
QTextCursor* QTextFrame_LastCursorPosition(const QTextFrame* self);
int QTextFrame_FirstPosition(const QTextFrame* self);
int QTextFrame_LastPosition(const QTextFrame* self);
QTextFrameLayoutData* QTextFrame_LayoutData(const QTextFrame* self);
void QTextFrame_SetLayoutData(QTextFrame* self, QTextFrameLayoutData* data);
libqt_list /* of QTextFrame* */ QTextFrame_ChildFrames(const QTextFrame* self);
QTextFrame* QTextFrame_ParentFrame(const QTextFrame* self);
QTextFrame__iterator* QTextFrame_Begin(const QTextFrame* self);
QTextFrame__iterator* QTextFrame_End(const QTextFrame* self);
libqt_string QTextFrame_Tr2(const char* s, const char* c);
libqt_string QTextFrame_Tr3(const char* s, const char* c, int n);
void QTextBlockUserData_OperatorAssign(QTextBlockUserData* self, QTextBlockUserData* param1);
QTextBlock* QTextBlock_new();
QTextBlock* QTextBlock_new2(QTextBlock* o);
void QTextBlock_OperatorAssign(QTextBlock* self, QTextBlock* o);
bool QTextBlock_IsValid(const QTextBlock* self);
bool QTextBlock_OperatorEqual(const QTextBlock* self, QTextBlock* o);
bool QTextBlock_OperatorNotEqual(const QTextBlock* self, QTextBlock* o);
bool QTextBlock_OperatorLesser(const QTextBlock* self, QTextBlock* o);
int QTextBlock_Position(const QTextBlock* self);
int QTextBlock_Length(const QTextBlock* self);
bool QTextBlock_Contains(const QTextBlock* self, int position);
QTextLayout* QTextBlock_Layout(const QTextBlock* self);
void QTextBlock_ClearLayout(QTextBlock* self);
QTextBlockFormat* QTextBlock_BlockFormat(const QTextBlock* self);
int QTextBlock_BlockFormatIndex(const QTextBlock* self);
QTextCharFormat* QTextBlock_CharFormat(const QTextBlock* self);
int QTextBlock_CharFormatIndex(const QTextBlock* self);
int QTextBlock_TextDirection(const QTextBlock* self);
libqt_string QTextBlock_Text(const QTextBlock* self);
libqt_list /* of QTextLayout__FormatRange* */ QTextBlock_TextFormats(const QTextBlock* self);
QTextDocument* QTextBlock_Document(const QTextBlock* self);
QTextList* QTextBlock_TextList(const QTextBlock* self);
QTextBlockUserData* QTextBlock_UserData(const QTextBlock* self);
void QTextBlock_SetUserData(QTextBlock* self, QTextBlockUserData* data);
int QTextBlock_UserState(const QTextBlock* self);
void QTextBlock_SetUserState(QTextBlock* self, int state);
int QTextBlock_Revision(const QTextBlock* self);
void QTextBlock_SetRevision(QTextBlock* self, int rev);
bool QTextBlock_IsVisible(const QTextBlock* self);
void QTextBlock_SetVisible(QTextBlock* self, bool visible);
int QTextBlock_BlockNumber(const QTextBlock* self);
int QTextBlock_FirstLineNumber(const QTextBlock* self);
void QTextBlock_SetLineCount(QTextBlock* self, int count);
int QTextBlock_LineCount(const QTextBlock* self);
QTextBlock__iterator* QTextBlock_Begin(const QTextBlock* self);
QTextBlock__iterator* QTextBlock_End(const QTextBlock* self);
QTextBlock* QTextBlock_Next(const QTextBlock* self);
QTextBlock* QTextBlock_Previous(const QTextBlock* self);
int QTextBlock_FragmentIndex(const QTextBlock* self);
QTextFragment* QTextFragment_new();
QTextFragment* QTextFragment_new2(QTextFragment* o);
void QTextFragment_OperatorAssign(QTextFragment* self, QTextFragment* o);
bool QTextFragment_IsValid(const QTextFragment* self);
bool QTextFragment_OperatorEqual(const QTextFragment* self, QTextFragment* o);
bool QTextFragment_OperatorNotEqual(const QTextFragment* self, QTextFragment* o);
bool QTextFragment_OperatorLesser(const QTextFragment* self, QTextFragment* o);
int QTextFragment_Position(const QTextFragment* self);
int QTextFragment_Length(const QTextFragment* self);
bool QTextFragment_Contains(const QTextFragment* self, int position);
QTextCharFormat* QTextFragment_CharFormat(const QTextFragment* self);
int QTextFragment_CharFormatIndex(const QTextFragment* self);
libqt_string QTextFragment_Text(const QTextFragment* self);
libqt_list /* of QGlyphRun* */ QTextFragment_GlyphRuns(const QTextFragment* self);
libqt_list /* of QGlyphRun* */ QTextFragment_GlyphRuns1(const QTextFragment* self, int from);
libqt_list /* of QGlyphRun* */ QTextFragment_GlyphRuns2(const QTextFragment* self, int from, int length);